Archive2/a2/bf421906cf6ba4/output
+ g++ -std=c++11 -Wall -Wextra main.cpp
main.cpp:2:10: error: ISO C++ forbids declaration of 'X' with no type [-fpermissive]
     X(int){}
          ^
main.cpp: In member function 'int<anonymous struct>::X(int)':
main.cpp:2:12: warning: no return statement in function returning non-void [-Wreturn-type]
     X(int){}
            ^
main.cpp: In function 'int main()':
main.cpp:6:11: error: no matching function for call to '<anonymous struct>::._0(int)'
     X x(42);
           ^
main.cpp:6:11: note: candidates are:
main.cpp:1:17: note: constexpr<anonymous struct>::<constructor>()
 using X = struct{
                 ^
main.cpp:1:17: note:   candidate expects 0 arguments, 1 provided
main.cpp:1:17: note: constexpr<anonymous struct>::<constructor>(const<anonymous struct>&)
main.cpp:1:17: note:   no known conversion for argument 1 from 'int' to 'const<anonymous struct>&'
main.cpp:1:17: note: constexpr<anonymous struct>::<constructor>(<anonymous struct>&&)
main.cpp:1:17: note:   no known conversion for argument 1 from 'int' to '<anonymous struct>&&'
