Archive2/a2/bf421906cf6ba4/main.cpp
using X = struct{
    X(int){}
};

int main(){
    X x(42);
}